# F-EGLA-Toolkit

./: LICENSE  README.md  pyproject.toml  requirements.txt
data/Arica/: README.txt
notebook/: EGLA_run.ipynb  FEGLA_run.ipynb
outputs/Arica/: README.txt
scripts/: area_results.py  calibrate_fegla.py  get_hmax.py  get_transects.py  get_transects_EGLA.py  get_transects_FEGLA.py
scripts/config/: Arica_inputs.json
tsunamicore/fegla/: model.py  operations.py
tsunamicore/postprocessing/: nootebook_tools.py  results.py
tsunamicore/preprocessing/: simulation.py  transects.py
tsunamicore/utils/: plot_style.py
